FEAT: Add validation
